Sat Mar 19 15:06:37 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/ExecutionManager/DAM_Map.cpp:
        * DAnCE/ExecutionManager/DAM_Map.h:
        * DAnCE/ExecutionManager/ExecutionManager.mpc:
        * DAnCE/ExecutionManager/Execution_Manager.cpp:
        * DAnCE/ExecutionManager/Execution_Manager_Impl.cpp:
        * DAnCE/ExecutionManager/Execution_Manager_Impl.h:
        * DAnCE/NodeApplication/NodeApplication.cpp:
        * DAnCE/NodeManager/NodeDaemon_Impl.cpp:

          Made changes to fix compile errors.

Sat Mar 19 15:02:03 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/DomainApplicationManager/Deployment_Configuration.h:
        * DAnCE/DomainApplicationManager/DomainApplicationManager.mpc:
        *
          DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:

          Made changes to reflect changes made to the CIAO
          infrastructure to support NodeApplication instantiate
          multiple containers.

          Thanks to Gan Deng <dengg@dre.vanderbilt.edu> for making this
          change.

Sat Mar 19 14:54:15 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/examples/BasicSP/descriptors/BasicSP.cdp:
        * DAnCE/examples/BasicSP/descriptors/NodeManagerMap.dat:
        * DAnCE/examples/BasicSP/descriptors/basicNodeDaemon.pl:
        * DAnCE/examples/BasicSP/descriptors/flattern_deploymentplan.cdp:

          Added a flattened deployment plan for testing the DaNCE
          infrastructure.

          Thanks to Will Otte <w.otte@vanderbilt.edu> for helping
          out with this project.

Sat Mar 19 14:23:49 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/examples/Swapping/Hello_Base/Hello_Base.idl:
        * DAnCE/examples/Swapping/Hello_Base/Hello_Base.mpc:
        * DAnCE/examples/Swapping/Hello_Base/Hello_Base_stub_export.h:
        * DAnCE/examples/Swapping/Hello_Base/Hello_Base_svnt_export.h:
        * DAnCE/examples/Swapping/Receiver/Receiver.mpc: